--- a/sala-de-reuniao-backend/pom.xml
+++ b/sala-de-reuniao-backend/pom.xml
@@ -52,6 +52,12 @@
 			<version>2.0.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.18.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
